--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,14 @@
-<h1>Choose how you will get wasted today!</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1560681046-62b1b615d799?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1371&q=80')">
+  <div class="container">
+    <h1>Choose how you will get wasted today!</h1>
+  </div>
+</div>
+
+
 <div class="container">
+  <hr>
+  <h2>Our favourite Cocktail recipes</h2>
+  <hr>
 <div class="cards">
 
 <% @cocktails.each do |cocktail| %>
