--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,7 +1,9 @@
+<div class="container">
 <h1>Add a new cocktail</h1>
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.input :name %>
   <%= f.input :image_url %>
   <%= f.submit "Add a cocktail", class: "btn btn-primary" %>
 <% end %>
+</div>
 
