--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,6 +5,8 @@
 </div>
 
 
+
+
 <div class="container">
   <hr>
   <h2>Our favourite Cocktail recipes</h2>
@@ -12,7 +14,7 @@
 <div class="cards">
 
 <% @cocktails.each do |cocktail| %>
-<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cocktail.image_url %>')">
+<div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo %>')">
   <%= link_to cocktail.name, cocktail_path(cocktail) %>
 </div>
 <% end %>
