--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,16 @@
       <li class="nav-item">
         <a class="nav-link" href="/cocktails/new">Add a Cocktail</a>
       </li>
+      <li class="nav-item">
+        <%= simple_form_for :search, url: cocktails_path, method: :get do |f| %>
+        <div class="search-form-control form-group">
+          <input class="form-control string required" type="text" name="search[ingredient]" id="search_query" />
+          <button name="button" type="submit" class="btn btn-flat">
+            <i class="fas fa-search"></i> Search
+          </button>
+        </div>
+      <% end %>
+      </li>
     </ul>
   </div>
 </div>
